<resources>
    <string name="app_name">Minutes</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="user_profile">个人信息</string>
    <string name="nav_item_home">首页</string>
    <string name="nav_item_wallet">我的钱包</string>
    <string name="nav_item_order_list">历史记录</string>
    <string name="nav_item_switch">切换身份</string>
    <string name="nav_item_help">帮助</string>
    <string name="nav_item_about">关于</string>
    <string name="nav_item_signout">注销</string>
    <string name="app_name_english">Minutes</string>
    <string name="verify_get_text">获取验证码</string>
    <string name="login_text">登录</string>
    <string name="nickNameKey">昵称</string>
    <string name="nickNameKeyValue"></string>
    <string name="genderKey">性别</string>
    <string name="gender_girl">女</string>
    <string name="gender_boy">男</string>
    <string name="phoneNumberKey">手机</string>
    <string name="phoneNumberKeyValue"></string>
    <string name="finishButton">保存</string>
    <string name="online">上线</string>
    <string name="offline">下线</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_wallet</item>
        <item>@string/nav_item_order_list</item>
        <item>@string/nav_item_switch</item>
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_signout</item>
    </string-array>

    <string name="title_messages">消息</string>
    <string name="title_order_list">历史记录</string>
    <string name="title_home">首页</string>
    <string name="title_wallet">我的钱包</string>
    <string name="title_help">帮助</string>
    <string name="title_about">关于</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_status">接下来请选择你的身份</string>
    <string name="title_activity_register">完善信息</string>
    <string name="title_activity_load">启动</string>
    <string name="title_activity_receive_order">ReceiveOrder</string>
    <string name="title_activity_order_making">OrderMaking</string>
</resources>
